basic design done

--- a/index.html
+++ b/index.html
@@ -10,13 +10,29 @@
 </head>
 
 <body>
-    <textarea id="txt-area" placeholder="Search here"></textarea>
-    <br>
-    <button id = "searchButton">search</button>
-    <br>
-    <br>
-    <div id="output-div">
+    <nav id="nav">
+        <h2>projectDictionary</h2>
+    </nav>
+    <div id= "main-content">
+        <textarea id="txt-area" placeholder="Search here"></textarea>
+        <br>
+        <button id="searchButton">search</button>
+        <br>
+        <br>
+        <div id="output-div">
+            <div id="input-div1">
 
+            </div>
+            <div id="input-div2">
+
+            </div>
+            <div id="input-div3">
+
+            </div>
+            <div id="input-div4">
+
+            </div>
+        </div>
     </div>
 </body>
 
