--- a/index.html
+++ b/index.html
@@ -13,25 +13,32 @@
     <nav id="nav">
         <h2>projectDictionary</h2>
     </nav>
-    <div id= "main-content">
+    <div id="main-content">
         <textarea id="txt-area" placeholder="Search here"></textarea>
-        <br>
+        
+
         <button id="searchButton">search</button>
         <br>
         <br>
         <div id="output-div">
-            <div id="input-div1">
+            <div class="card-content">
+                <div id="input-div1">
 
+                </div>
             </div>
-            <div id="input-div2">
+            <div class="card-content">
+                <div id="input-div2">
+                </div>
+            </div>
+            <div class="card-content">
+                <div id="input-div3">
+                </div>
+            </div>
+            <div class="card-content">
+                <div id="input-div4">
+                </div>
+            </div>
 
-            </div>
-            <div id="input-div3">
-
-            </div>
-            <div id="input-div4">
-
-            </div>
         </div>
     </div>
 </body>
