pronounciation feat added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h2>projectDictionary</h2>
     </nav>
     <div id="main-content">
-        <textarea id="txt-area" placeholder="Search here"></textarea>
-        
-
-        <button id="searchButton">search</button>
+        <div class="search_box">
+            <textarea id="txt-area" placeholder="Search here"></textarea>
+            <button id="searchButton"><img src="bx-search.svg"><strong>search</strong></button>
+        </div>
         <br>
         <br>
         <div id="output-div">
